2002-11-29  Jakub Jelinek  <jakub@redhat.com>

	* config/tc-ia64.c (md_apply_fix3): Add default case.

2002-11-28  Jakub Jelinek  <jakub@redhat.com>

	* symbols.c (S_SET_THREAD_LOCAL): New function.
	* symbols.h (S_SET_THREAD_LOCAL): New prototype.
	* config/tc-i386.c (md_apply_fix3): Call S_SET_THREAD_LOCAL
	for TLS relocations.
	* config/tc-ia64.c (md_apply_fix3): Likewise.
	* config/tc-alpha.c (md_apply_fix3): Likewise.

2002-11-28  Jakub Jelinek  <jakub@redhat.com>

	* write.c (subsegs_finish): For SEC_MERGE sections pad last fragment
	to entsize.

2002-11-26  DJ Delorie  <dj@redhat.com.

	* dwarf2dbg.c (scale_addr_delta): New.
	(size_inc_line_addr): Use it.
	(emit_inc_line_addr): Use it.

2002-11-26  Hans-Peter Nilsson  <hp@axis.com>

	* config/tc-cris.c (cris_relax_frag): Fix typo in comment.
	(md_assemble): Don't pass on branches to constants as relaxable.
	Tweak comment.

2002-11-25  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* config/tc-tic4x.c (c4x_operands_match): Bugfix in direct mode

2002-11-21  Randolph Chung  <randolph@tausq.org>

	* config/tc-hppa.h (tc_frob_symbol):  Frob undefined unused symbols
	only if they have default visibility.

2002-11-21  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (alpha_fix_adjustable): Remove redundant
	S_IS_DEFINED test.

2002-11-21  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-mcore.c (mcore_pool_count): New function.
	(mcore_cons, mcore_float_cons, mcore_stringer, mcore_fill): Use it.

2002-11-20  Klee Dienes  <kdienes@apple.com>

	* config/tc-mcore.c (md_begin): Use a const iterator.  Don't
	coalesce the name fields to use the same pointer.

	* config/tc-sh.c (md_begin): Use a const iterator.  Don't coalesce
	the name fields to use the same pointer.
	(get_specific): Check for opcodes with the same name using strcmp
	as well as comparing the pointer.

2002-11-20  Alan Modra  <amodra@bigpond.net.au>

	* write.c (adjust_reloc_syms): Don't reduce SEC_MERGE fixups with
	fx_subsy non-NULL.
